# typestate-pattern-usecase

./: Cargo.toml  README.md
src/: constants.rs  lib.rs  main.rs  safe_monitor.rs  server.rs  unsafe_monitor.rs
src/abis/: chainlink_aggregator.json  tether.json
src/monitors/: common.rs  mod.rs  safe.rs  states.rs  types.rs  unsafe_monitor.rs
src/server/: handlers.rs  mod.rs  routes.rs
static/: index.html  script.js  styles.css
