[package]
name = "typestate-pattern-usecase"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "macros"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
ethers = { version = "2.0", features = ["ws", "rustls"] }
eyre = "0.6"
dotenv = "0.15"
axum = { version = "0.7", features = ["http2"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
hyper = { version = "1.0", features = ["server"] }
