[package]
name = "typestate-pattern-usecase"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.47.1", features = ["full", "macros"] }
reqwest = { version = "0.12.23", features = ["json"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
ethers = { version = "2.0", features = ["ws", "rustls"] }
eyre = "0.6"
dotenv = "0.15"
axum = { version = "0.8.4", features = ["http2"] }
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
hyper = { version = "1.7.0", features = ["server"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
